# symphony-mux

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  SPEC.md  WORKFLOW.example.md  pyproject.toml  show_ndjson.py  workflow.example.yaml
.agents/skills/using-superpowers/: SKILL.md
.github/workflows/: ci.yml
.stokowski/: workflow.yaml
.stokowski/prompts/: global.md  lifecycle-post-run.md  lifecycle.md  test-claude.md
.stokowski/prompts/common/: correct-findings-code-review.md  merge.md  review-findings-route.md
.stokowski/prompts/debug/: correct-findings-code-review.md  fix.md  global.md  investigate.md  merge.md  review-findings-route.md
.stokowski/prompts/docs/: global.md  write.md
.stokowski/prompts/feature/: correct-findings-code-review.md  implement.md  investigate.md  merge.md  review-findings-route.md  review.md
docs/: workflow-multi-example.yaml
openspec/changes/archive/2026-03-30-add-mux-runner/: design.md  proposal.md  tasks.md  tasks.md.bak
openspec/changes/archive/2026-03-30-externalize-lifecycle-md/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-30-extract-validation-helper/: design.md  proposal.md  tasks.md
openspec/changes/common-prompts-for-workflows/: tasks.md
openspec/changes/man-27-image-from-issue/: proposal.md  tasks.md
openspec/changes/multi-workflow-label-routing/: design.md  proposal.md  tasks.md
openspec/changes/theme-toggle-light/: design.md  proposal.md  tasks.md
openspec/specs/lifecycle-template/: spec.md
openspec/specs/validation-helper/: spec.md
openspec/specs/workflow-agent-gate/: spec.md
openspec/specs/workflow-config/: spec.md
prompts/: lifecycle.md
prompts/debug/: fix.md
prompts/feature/: global.md  implement.md  investigate.md  merge.md  review-findings-route.md  review.md
scripts/: run-tests.sh
stokowski/: __init__.py  agent_gate_route.py  config.py  datetime_parse.py  linear.py  main.py  models.py  orchestrator.py  prompt.py  reporting.py  runner.py  tracking.py  web.py  workspace.py
stokowski/prompts/: global.md
tests/: conftest.py  test_agent_gate_orchestrator.py  test_agent_gate_route.py  test_dashboard_3line_output.py  test_dashboard_token_tracking.py  test_datetime_parse.py  test_feature_merge_prompt.py  test_integration.py  test_investigate_prompt_branch_instructions.py  test_linear_comments.py  test_linear_images.py  test_main_cli.py  test_parse_latest_tracking_timestamp.py  test_prompt.py  test_reporting.py  test_resolved_project_slug.py  test_runner.py  test_runner_agent_output_log.py  test_runner_validation.py  test_tracking_gate_waiting.py  test_tracking_json_extraction.py  test_web_theme.py  test_workflow_config.py  test_workflow_routing.py
(+25 files in other folders)
